Checkstyle fixes.  Spring fixes. Conditional logic to test bad booleanBasis.   First draft of validator test.